--- a/analysis/Simulacao_RGPS.ipynb
+++ b/analysis/Simulacao_RGPS.ipynb
@@ -14,8 +14,8 @@
     "import model.dsprev as dp\n",
     "\n",
     "# Parâmetros da simulação\n",
-    "i = np.arange(1,81,1)        # [1,80]\n",
-    "t = np.arange(2016,2036,1)   # [2016, 2035]\n",
+    "i = np.arange(0,151,1)        # [0,150]\n",
+    "t = np.arange(2016,2036,1)    # [2016, 2035]\n",
     "s = np.array([1, 3 ,9])\n",
     "c = np.array([1, 2, 9])\n",
     "k = [32, # Aposentadoria por invalidez previdenciária \n",
@@ -27,19 +27,12 @@
     "dbtable = 'FATO_AUXILIO_SAMPLE'\n",
     "#dbtable = 'FATO_AUXILIO'\n",
     "\n",
-    "# Conection parameters                                                          \n",
+    "# Conection parameters\n",
     "host='tama'\n",
     "port='5432'\n",
     "dbname='prevdb'\n",
     "user='prevdb_user'\n",
-    "pwd='pr3v'\n",
-    "\n",
-    "# Connect to an existing database\n",
-    "try:\n",
-    "    conn = psycopg2.connect(\"host='{}' port={} dbname='{}'user={} password={}\"\n",
-    "            .format(host, port, dbname, user, pwd))\n",
-    "except:\n",
-    "        print(\"Unable to connect to the database\")"
+    "pwd='pr3v'"
    ]
   },
   {
@@ -483,7 +476,7 @@
     " * $P$ é a população\n",
     " * $Pe$ é a **probabilidade de entrada** do benefício específico\n",
     " \n",
-    " $Pe(i,s,c,k) = \\frac{concessoes(i,s,c,k)}{P(i,s,c,k)}$\n",
+    " $Pe(i,t,s,c,k) = \\frac{concessoes(i,t,s,c,k)}{P(i,t,s,c)}$\n",
     "\n",
     "* Precisa-se ainda da probabilidade se sobrevivência, definida por:\n",
     " $Ps (i, t, s) = \\frac{P(i+1, t+1, s)}{P(i,t,s)}$\n",
@@ -582,11 +575,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eb_2016 = 15282\n"
+      "Eb_2016 = 15293\n"
      ]
     }
    ],
    "source": [
+    "# Connect to an existing database\n",
+    "try:\n",
+    "    conn = psycopg2.connect(\"host='{}' port={} dbname='{}'user={} password={}\"\n",
+    "            .format(host, port, dbname, user, pwd))\n",
+    "except:\n",
+    "        print(\"Unable to connect to the database\")\n",
     "Eb2016 = dp.Eb(i,s,c,k,conn, dbtable)\n",
     "print(\"Eb_2016 = {}\".format(Eb2016))"
    ]
@@ -595,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $P(i,s,c,k)$"
+    "### População - $P(i,s,c,k)$"
    ]
   },
   {
@@ -610,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +618,7 @@
        "Text(0.5, 1.0, 'Estimativa da População Brasileira')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,16 +636,69 @@
     }
    ],
    "source": [
-    "df = dp.P()\n",
+    "pop = dp.P()\n",
     "# Create Figure and add set of axes (empty canvas)\n",
     "fig = plt.figure()\n",
     "axes = fig.add_axes([1, 1, 1, 1])\n",
     "\n",
     "# Plot on that set of axes\n",
-    "axes.plot(df['Ano'], df['Brasil'], 'b')\n",
+    "axes.plot(pop['Ano'], pop['Brasil'], 'b')\n",
     "axes.set_xlabel('Ano')\n",
     "axes.set_ylabel('População')\n",
     "axes.set_title('Estimativa da População Brasileira')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concessões - $concessoes(i,t,s,c,k)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "concessoes2016 = 1282\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Connect to an existing database\n",
+    "try:\n",
+    "    conn = psycopg2.connect(\"host='{}' port={} dbname='{}'user={} password={}\"\n",
+    "            .format(host, port, dbname, user, pwd))\n",
+    "except:\n",
+    "        print(\"Unable to connect to the database\")\n",
+    "concessoes2016 = dp.concessoes(i,[2016],s,c,k,conn, dbtable)\n",
+    "print(\"concessoes2016 = {}\".format(concessoes2016))\n",
+    "\n",
+    "# TODO - Plot concessoes by year\n",
+    "#ano_array = np.arange(1995, 2017, 1)\n",
+    "#concessoes = np.arange(1995, 2017, 1)\n",
+    "#for counter in len(ano_array):\n",
+    "#    concessoes[counter] = dp.concessoes(i,np.array(ano_array[counter]),s,c,k,conn, dbtable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probabilidade de Entrada = $Pe(i, t, s, c, k)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pe = 1"
    ]
   },
   {
