Updates Eb() default parameters

--- a/analysis/Simulacao_RGPS.ipynb
+++ b/analysis/Simulacao_RGPS.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
      "text": [
       "Eb_2016 = 12656\n",
       "\n",
-      "Execution time: 0.0182 minutes.\n"
+      "Execution time: 0.0180 minutes.\n"
      ]
     },
     {
@@ -637,9 +637,18 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr>\n",
+       "      <th>beneficio</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">41</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">42</th>\n",
+       "      <th>desc</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>clientela</th>\n",
        "      <th colspan=\"2\" halign=\"left\">1</th>\n",
        "      <th colspan=\"2\" halign=\"left\">2</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">1</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">2</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sexo</th>\n",
@@ -647,9 +656,19 @@
        "      <th>3</th>\n",
        "      <th>1</th>\n",
        "      <th>3</th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>idade</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -659,143 +678,224 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Menos de 1 ano</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1 a 4 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5 a 9 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10 a 14 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15 a 19 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20 a 24 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25 a 29 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30 a 34 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35 a 39 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>125.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40 a 44 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>265.0</td>\n",
-       "      <td>187.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>530</td>\n",
+       "      <td>374</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45 a 49 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>497.0</td>\n",
-       "      <td>245.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>994</td>\n",
+       "      <td>491</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50 a 54 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>413.5</td>\n",
-       "      <td>149.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1284.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2568</td>\n",
+       "      <td>827</td>\n",
+       "      <td>299</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55 a 59 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>188.5</td>\n",
-       "      <td>937.0</td>\n",
-       "      <td>918.5</td>\n",
-       "      <td>166.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1846</td>\n",
+       "      <td>1834</td>\n",
+       "      <td>332</td>\n",
+       "      <td>377</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60 a 64 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>574.5</td>\n",
-       "      <td>97.5</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>49.5</td>\n",
+       "      <td>1128</td>\n",
+       "      <td>194</td>\n",
+       "      <td>102</td>\n",
+       "      <td>99</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65 a 69 anos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>29.5</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>69</td>\n",
+       "      <td>23</td>\n",
+       "      <td>50</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70 anos ou mais</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "clientela      1             2        \n",
-       "sexo           1      3      1       3\n",
-       "idade                                 \n",
-       "0            0.0    0.0    0.0     0.0\n",
-       "1            0.0    0.0    0.0     0.0\n",
-       "2            0.0    0.0    0.0     0.0\n",
-       "3            0.0    0.0    0.0     0.0\n",
-       "4            0.0    0.0    0.0     0.0\n",
-       "5            0.0    0.0    0.0     0.0\n",
-       "6            0.0    0.0    0.0     0.0\n",
-       "7            0.0    0.5    0.0     0.0\n",
-       "8           19.0    4.5    0.0     0.0\n",
-       "9          125.0   50.0    0.5     0.0\n",
-       "10         265.0  187.0    0.0     0.0\n",
-       "11         497.0  245.5    3.0     0.0\n",
-       "12         413.5  149.5    1.0  1284.0\n",
-       "13         188.5  937.0  918.5   166.0\n",
-       "14         574.5   97.5   51.0    49.5\n",
-       "15          29.5   34.5   11.5    25.0"
+       "beneficio    41                     42                        desc\n",
+       "clientela     1           2          1       2                    \n",
+       "sexo          1     3     1     3    1    3  1  3                 \n",
+       "idade                                                             \n",
+       "0             0     0     0     0    0    0  0  0   Menos de 1 ano\n",
+       "1             0     0     0     0    0    0  0  0       1 a 4 anos\n",
+       "2             0     0     0     0    0    0  0  0       5 a 9 anos\n",
+       "3             0     0     0     0    0    0  0  0     10 a 14 anos\n",
+       "4             0     0     0     0    0    0  0  0     15 a 19 anos\n",
+       "5             0     0     0     0    0    0  0  0     20 a 24 anos\n",
+       "6             0     0     0     0    0    0  0  0     25 a 29 anos\n",
+       "7             0     0     0     0    0    1  0  0     30 a 34 anos\n",
+       "8             0     0     0     0   38    9  0  0     35 a 39 anos\n",
+       "9             0     0     0     0  250  100  1  0     40 a 44 anos\n",
+       "10            0     0     0     0  530  374  0  0     45 a 49 anos\n",
+       "11            0     0     0     0  994  491  6  0     50 a 54 anos\n",
+       "12            0     0     0  2568  827  299  2  0     55 a 59 anos\n",
+       "13            0  1846  1834   332  377   28  3  0     60 a 64 anos\n",
+       "14         1128   194   102    99   21    1  0  0     65 a 69 anos\n",
+       "15           51    69    23    50    8    0  0  0  70 anos ou mais"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,20 +910,25 @@
     "        \n",
     "func_time = time.time()\n",
     "\n",
-    "Eb2016 = dp.Eb(i,s,c,k,conn, dbtable)\n",
+    "Eb2016 = dp.Eb(conn, dbtable, i, s, c, k)\n",
     "print(\"Eb_2016 = {}\".format(Eb2016))\n",
     "\n",
-    "df['Eb'] = df.apply(lambda row: dp.Eb([row['idade']], \n",
-    "                                      [row['sexo']],\n",
-    "                                      [row['clientela']],\n",
-    "                                      [row['beneficio']],\n",
-    "                                      conn, dbtable), axis=1)\n",
+    "df['Eb'] = df.apply(lambda row: dp.Eb(conn, dbtable,\n",
+    "                                      i=[row['idade']], \n",
+    "                                      s=[row['sexo']],\n",
+    "                                      c=[row['clientela']],\n",
+    "                                      k=[row['beneficio']]), axis=1)\n",
     "# Close communication with the database                                     \n",
     "conn.close() \n",
     "\n",
-    "elapsed_time = (time.time() - func_time) / 60                                  \n",
+    "elapsed_time = (time.time() - func_time) / 60\n",
     "print(\"\\nExecution time: {0:0.4f} minutes.\".format(elapsed_time))\n",
-    "df.pivot_table(values='Eb',index='idade',columns=['clientela', 'sexo'])"
+    "\n",
+    "# Pivot table\n",
+    "pvdf = df.pivot_table(values='Eb',index='idade',columns=['beneficio', 'clientela', 'sexo'])\n",
+    "pvdf['desc'] = pvdf.index\n",
+    "pvdf['desc'] = pvdf['desc'].apply(lambda x: dp.get_age_description(x))\n",
+    "pvdf"
    ]
   },
   {
